[package]
edition      = "2024"
name         = "sis_pressure_vessels"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "sis_pressure_vessels"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32s3", "unstable"] }


esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }

critical-section = "1.2.0"
esp-println = { version = "0.16.1", features = ["esp32s3"] }
smart-leds = "0.4.0"
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community.git", features = ["esp32s3"], version = "0.17.0" }
nb = "1.1.0"


[profile.dev]
opt-level = "s"

[profile.release]
codegen-units    = 1     
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
